Sistemata prima stesura piano di progetto

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -17,7 +17,7 @@
 Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei costi sostenuti fino ad oggi e li confronta con i costi preventivati, in relazione agli obiettivi fissati.
 }
 
-\addversione{0.0.0}{22/04/2023}{Erica Cavaliere}{}{Stesura iniziale}
+\addversione{0.0.0}{22/04/2023}{Erica Cavaliere}{Redazione}{Stesura iniziale}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -43,125 +43,8 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 
 \section{Pianificazione del lavoro}
 
-\subsection{RTB}
-\paragraph{Analisi dei Requisiti}
-Inizio: 14/04/2023\par
-Fine prevista: 30/04/2023\par
-Fine effettiva: TBD
 
-Ore richieste:\\[0.5em]
-\begin{tabular}{|l|l|l||l|l|l|l|}\hline
-Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Analista & 42 & TBD & 25\euro & 1050\euro & TBD \\\hline
-Verificatore & 8 & TBD & 15\euro & 120\euro & TBD \\\hline
-Totale ore: & 50 & TBD & Totale costi: & 1170\euro & TBD \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
-\end{tabular}
-
-Ruoli assegnati:\\[0.5em]
-\begin{tabular}{|l|l|l|l|l|}\hline
-Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Francesco Ceccato & Analista & 21 & TBD & TBD \\\hline
-Erica Cavaliere & Analista & 21 & TBD & TBD \\\hline
-Lorenzo Salami & Verificatore & 8 & TBD & TBD \\\hline
-\end{tabular}
-
-\paragraph{Analisi delle Tecnologie}
-Inizio: 14/04/2023\par
-Fine prevista: 30/04/2023\par
-Fine effettiva: TBD
-
-Ore richieste:\\[0.5em]
-\begin{tabular}{|l|l|l||l|l|l|l|}\hline
-Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Analista & 42 & TBD & 25\euro & 1050\euro & TBD \\\hline
-Verificatore & 6 & TBD & 15\euro & 90\euro & TBD \\\hline
-Totale ore: & 48 & TBD & Totale costi: & 1140\euro & TBD  \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
-\end{tabular}
-
-Ruoli assegnati:\\[0.5em]
-\begin{tabular}{|l|l|l|l|l|}\hline
-Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Matteo Soldà & Analista & 21 & TBD & TBD \\\hline
-Nicolas Alberti & Analista & 21 & TBD & TBD \\\hline
-Lorenzo Salami & Verificatore & 6  & TBD & TBD \\\hline
-\end{tabular}
-
-\paragraph{Piano di Progetto (RTB)}
-Inizio: 14/04/2023\par
-Fine prevista: 30/04/2023\par
-Fine effettiva: TBD
-
-Ore richieste:\\[0.5em]
-\begin{tabular}{|l|l|l||l|l|l|l|}\hline
-Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Responsabile & 21 & TBD & 30\euro & 630\euro & TBD \\\hline
-Verificatore & 3 & TBD & 15\euro & 45\euro & TBD \\\hline
-Totale ore: & 24 & TBD & Totale costi: & 675\euro & TBD \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
-\end{tabular}
-
-Ruoli assegnati:\\[0.5em]
-\begin{tabular}{|l|l|l|l|l|}\hline
-Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Matteo Soldà & Responsabile & 11 & TBD & TBD \\\hline
-Romina Brotto & Responsabile & 10 & TBD & TBD \\\hline
-Lorenzo Salami & Verificatore & 3 & TBD & TBD \\\hline
-\end{tabular}
-
-\paragraph{Piano di Qualifica (RTB)}
-Inizio: 14/04/2023\par
-Fine prevista: 30/04/2023\par
-Fine effettiva: TDB
-
-Ore richieste:\\[0.5em]
-\begin{tabular}{|l|l|l||l|l|l|l|}\hline
-Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.  \\\hline
-Responsabile & 21 & TDB & 30\euro & 630\euro & TDB \\\hline
-Verificatore & 3 & TDB & 15\euro & 45\euro & TDB \\\hline
-Totale ore: & 24 & TDB & Totale costi: & 675\euro & 2TDB \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & TDB & \multicolumn{2}{r|}{Differenza di costo:} & TDB \\\hline
-\end{tabular}
-
-Ruoli assegnati:\\[0.5em]
-\begin{tabular}{|l|l|l|l|l|}\hline
-Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Lorenzo Salami & Responsabile & 10 & TDB & TDB \\\hline
-Romina Brotto & Responsabile & 11 & TDB & TDB \\\hline
-Matteo Soldà & Verificatore & 3 & TDB & TDB \\\hline
-\end{tabular}
-
-\paragraph{Sviluppo Proof of Concept}
-Inizio: TDB\par
-Fine prevista: TDB\par
-Fine effettiva: TBD
-
-Ore richieste:\\[0.5em]
-\begin{tabular}{|l|l|l||l|l|l|l|}\hline
-Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Programmatore & 40 & TBD & 15\euro & 600\euro & TBD \\\hline
-Verificatore & 3 & TBD & 15\euro & 45\euro & TBD \\\hline
-Totale ore: & 43 & TBD & Totale costi: & 645\euro & TBD \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
-\end{tabular}
-
-Ruoli assegnati:\\[0.5em]
-\begin{tabular}{|l|l|l|l|l|}\hline
-Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Francesco Ceccato & Programmatore & 20 & TBD & TBD \\\hline
-Nicolas Alberti & Programmatore & 20 & TBD & TBD \\\hline
-Erica Cavaliere & Verificatore  & 3 & TBD & TBD \\\hline
-\end{tabular}
-
-\paragraph{Presentazione Proof of Concept}
-Inizio: TDB\par
-Fine prevista: TDB\par
-Fine effettiva: TBD
-
-\paragraph{Grafico di Gannt}
-
-TODO: da stabilire con il gruppo quale programma utilizzare per il grafico di Gantt
+\paragraph{Grafico di Gantt}
 
 \section{Preventivo e consuntivo delle ore e dei costi}
 
