Aggiunti header e footer + separazione capitoli

--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -17,17 +17,18 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 }
 
 
-\addversione{0.0.1}{18/04/2023}{Lorenzo Salami}{Soldà Matteo}{Stesura iniziale.}
+\addversione{0.0.0}{18/04/2023}{Lorenzo Salami}{Soldà Matteo}{Stesura iniziale.}
+\addversione{0.0.1}{24/04/2023}{Soldà Matteo}{}{Aggiunta delle intestazioni e dei piè di pagina}
 
 
 \begin{document}
 
 \makefrontpage
-
+\makeindexdetails
 \makeversioni
-
 \tableofcontents
 \clearpage
+\makecontentsdetails
 
 \section{Qualità di prodotto}
 
@@ -87,7 +88,7 @@ La metrica si basa sul branch coverage.
 	\mbox{}\\
 \end{center}
 
-
+\newpage
 \section{Qualità di processo}
 \subsubsection{Time variance}
 La metrica si basa sulla variazione percentuale rispetto alla stima iniziale.
