Aggiunta versione corretta

--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -20,6 +20,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.3}{22/04/2023}{Alberti Nicolas}{}{Stesura iniziale sezioni "1.1, 2.1, 2.2"}
 \addversione{0.0.4}{22/04/2023}{Brotto Romina}{}{Stesura iniziale sezioni "3.3, 3.4, 4, 4.2"}
 \addversione{0.0.5}{24/04/2023}{Soldà Matteo}{}{Separazione capitoli e risoluzione di alcuni typo}
+\addversione{0.0.6}{24/04/2023}{Brotto Romina}{}{Risoluzione typo}
 
 \begin{document}
 \makeindexdetails
