Sistemazione sezioni TBD e TODO; Modifica e definizione codifica Use Case e Requisiti;

--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -21,6 +21,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.4}{22/04/2023}{Brotto Romina}{}{Stesura iniziale sezioni "3.3, 3.4, 4, 4.2"}
 \addversione{0.0.5}{24/04/2023}{Soldà Matteo}{}{Separazione capitoli e risoluzione di alcuni typo}
 \addversione{0.0.6}{24/04/2023}{Brotto Romina}{}{Risoluzione typo}
+\addversione{0.0.7}{25/04/2023}{Alberti Nicolas}{}{Modifica elementi TODO e TBD; introduzione Glossario v.0.0.0}
 
 \begin{document}
 \makeindexdetails
@@ -39,12 +40,16 @@ documenti e in tutte le attività del gruppo, per raggiungere in modo efficace e
 efficiente la realizzazione del prodotto finale.
 
 \subsubsection{Scopo del prodotto}
-TODO: inserire quello che abbiamo previsto nella candidatura e quello di cui
-abbiamo parlato nella presentazione.
+Lo scopo del prodotto è quello di realizzare una \textit{Web Application} per
+gestire e regolare l'intensità di uno o più impianti di illuminazione pubblica
+in maniera automatica o manuale.
 
 \subsubsection{Glossario}
-TODO: redigere un Glossario in un documento a parte oppure integrarlo qui;
-Indicare termine nel glossario con testo \textit{corsivo} e con una 'G' in pedice.
+Al fine di evitare ambiguità nei termini utilizzati durante la redazione dei
+documenti, viene fornito anche il \textit{Glossario v.0.0.0,} dove vengono
+definiti tutti i termini aventi un particolare significato. \\
+Un termine presente nel \textit{Glossario}, viene contrassegnato dal corsivo e
+da una 'G' aggiunta in pedice.
 \newpage
 
 \section{Processi Primari}
@@ -97,10 +102,14 @@ i documenti precedentemente elencati:
 \begin{itemize}
     \item \textbf{Google Calendar:} sistema di calendari, usato per inserire le
     scadenze e gli eventi significativi riguardanti il gruppo;
-    \item \textbf{Microsoft PowerPoint (TODO: Google Presentazioni?):} è un
-    software facente parte del pacchetto suite Microsoft Office, permette la
+    \item \textbf{Google Presentazioni:} è un
+    software facente parte del gruppo di applicazioni Google, permette la
     realizzazione delle presentazioni del gruppo.
-    \item \textbf{TODO: programma per Gantt}
+    \item \textbf{Google Fogli:} è un software facente parte del gruppo di
+    applicazioni Google, permette la realizzazione di fogli di calcolo in cui
+    vengono effettuati i conteggi delle ore. 
+    \item \textbf{Online Gantt:} è un programma per realizzare i diagrammi di
+    Gantt.
 \end{itemize}
 
 \subsubsection{Repository Pubblica}
@@ -147,17 +156,17 @@ i requisiti richiesti dal proponente, includendo anche il punto di vista
 dell'utente che utilizzerà i prodotti. Sarà presente una sezione legata al
 tracciamento dai requisiti ai casi d'uso e viceversa.
 
-\paragraph{TBD: Casi d'Uso}
+\paragraph{Casi d'Uso}
 Un Caso d'Uso è l'insieme degli scenari che prevedono uno stesso obiettivo per
 un utente. Vengono descritte le interazioni con il sistema da parte di uno o più
 attori, senza fornire alcun dettaglio implementativo. È formato da:
 \begin{itemize}
     \item \textbf{Diagramma \textit{UML}} (opzionale): indica la relazione con
     altri Casi d'Uso;
-    \item \textit{\textbf{TBD: Intestazione}}, nel formato:
+    \item \textit{\textbf{Intestazione}}, nel formato:
     \begin{center}
         \begin{BVerbatim}
-UC [Codice] - [Numero Caso d'Uso].[Sottocaso] [Titolo]
+UC [Codice].[Sottocaso] - [Titolo]
         \end{BVerbatim}   
     \end{center}
     dove:
@@ -177,7 +186,7 @@ UC [Codice] - [Numero Caso d'Uso].[Sottocaso] [Titolo]
     \item \textbf{Generalizzazioni}.
 \end{itemize}
 
-\paragraph{TBD: Requisiti}
+\paragraph{Requisiti}
 I requisiti ricavati dall'analisi approfondita del capitolato, dalle discussioni
 con i componenti del gruppo e dal confronto con il proponente, vengono suddivisi
 in tre tipologie:
@@ -195,7 +204,7 @@ Ogni requisito ha una determinata importanza, di seguito descritta:
     \item \textbf{Desiderabile}
     \item \textbf{Opzionale}
 \end{itemize}
-Ogni requisito viene presentato nel formato univoco descritto di seguito: \textbf{TBD}
+Ogni requisito viene presentato nel formato univoco descritto di seguito: 
 \begin{center}
     \begin{BVerbatim}
 R[Tipologia][Caso d'Uso Relativo].[Sottocaso] - [Importanza]
